--- a/src/stylesheets/Lungo.layout.nav.less
+++ b/src/stylesheets/Lungo.layout.nav.less
@@ -28,10 +28,11 @@ nav {
 header nav {
     & a {
         padding: 0 6px;
-        min-width: 28px;
+        min-width: 30px;
         z-index: 1000;
         float: left;
         height: @header-footer-height;
+        text-align: center;
 
         & .icon { font-size: 1.7em; }
 
