--- a/src/stylesheets/Lungo.widgets.button.less
+++ b/src/stylesheets/Lungo.widgets.button.less
@@ -17,7 +17,7 @@ a.button {
 
     background: #5a5a5a;
 
-    font-size: 14px;
+    font-size: 15px;
     text-align: center;
     text-decoration: none;
     line-height: 40px;
@@ -26,13 +26,11 @@ a.button {
     .user-select(none);
 
     &:active, &.active {
-        background: #4b4b4b;
-    }
+        background: #4b4b4b;}
 
     &:disabled, &.disabled {
         background: rgba(255,255,255,0.2);
-        color: #999 !important;
-    }
+        color: #999 !important; }
 
     & .icon {
         position: relative;
@@ -41,12 +39,10 @@ a.button {
         width: 18px;
         font-size: 18px;
         line-height: 18px;
-        margin-right: 4px;
-    }
+        margin-right: 4px; }
 
     & img {
-        top:  0px !important;
-    }
+        top:  0px !important; }
 
     &.big {
         width: 100%;
@@ -55,7 +51,6 @@ a.button {
 
         & .icon {
             margin: 8px -18px 0 12px;
-            float: left;
-        }
+            float: left; }
     }
 }
