List stylesheets (beta)

--- a/src/stylesheets/Lungo.layout.list.less
+++ b/src/stylesheets/Lungo.layout.list.less
@@ -13,11 +13,7 @@
     & li {
         list-style-type: none;
         padding: 8px;
-        position: relative;
-
-        /*
-        position: relative;
-        */
+        // position: relative;
 
         &.arrow::after{
             position: absolute;
