--- a/src/stylesheets/Lungo.theme.default.less
+++ b/src/stylesheets/Lungo.theme.default.less
@@ -156,6 +156,12 @@ footer > nav > a, nav.groupbar > a{
             color: #fff;
         }
 
+        &.disabled {
+            background: #EEEEEE;
+            &, & a { color: #666; }
+
+        }
+
         &.highlight { background: @list-border; }
         &.anchor {
             background: @theme-dark;
