--- a/src/stylesheets/Lungo.layout.list.less
+++ b/src/stylesheets/Lungo.layout.list.less
@@ -12,8 +12,8 @@
 .list {
     & li {
         list-style-type: none;
-        padding: 8px;
-        // position: relative;
+        padding: 9px;
+        position: relative;
 
         &.arrow::after{
             position: absolute;
@@ -39,11 +39,15 @@
             text-align: center;
         }
 
-        &.thumb img, &.thumb .icon {
-           margin: -8px 8px -8px -8px;
-           height: 46px !important;
-           width:46px !important;
-           font-size: 3.6em;
+        &.thumb {
+            & img, & .icon {
+                margin: -8px 8px -8px -8px;
+                // height: 46px !important;
+                // width:46px !important;
+                height: 48px !important;
+                width:48px !important;
+                font-size: 3.6em;
+            }
         }
 
         &.anchor {
@@ -59,6 +63,7 @@
         }
 
         & strong {
+            position: relative;
             font-size: 1.15em; }
 
         & small {
@@ -67,6 +72,10 @@
             white-space: nowrap;
             text-overflow: ellipsis;
             font-size: 0.8em;
+
+            & + .right {
+                margin-top: -12px;
+            }
         }
 
     }
@@ -77,8 +86,9 @@
     }
 
     & .right {
-        font-size: 0.75em;
-        font-weight: bold; }
+        font-size: 0.8em;
+        font-weight: bold;
+    }
 
     & .loading .right { font-size: 1.0em; }
 
@@ -87,7 +97,10 @@
         width: 13px !important;
         margin-right: 1px !important;
         font-size: 1.2em !important;
-        line-height: 0.8em;
+        line-height: 1.1em;
     }
 
+    &.indented li {
+        margin-bottom: 10px;
+    }
 }
