--- a/src/stylesheets/Lungo.theme.default.less
+++ b/src/stylesheets/Lungo.theme.default.less
@@ -7,8 +7,7 @@
  * @author Javier Jimenez Villar <javi@tapquo.com> || @soyjavi
  */
 
-@import "constants.less";
-// @import "lungo.theme.default.font.less";
+@import "mixins.less";
 
 @theme: #0093D5;
     @theme-light:  #39ABE1;
@@ -24,11 +23,17 @@
 
 @color: #484a49;
 
+
+@notification-error: #e33100;
+@notification-alert: #ffb515;
+@notification-success: #009600;
+
+
 @form-border-radius: 1px;
 
 .app {
     background: #000;
-    font-family: "Roboto", Helvetica, Arial, sans-serif;
+    font-family: Helvetica, Arial, sans-serif;
 }
 
 .theme, li.theme, a.theme {
@@ -338,9 +343,9 @@ input[type=range] {
             text-shadow: 0 1px 0px rgba(0,0,0,0.1);
             .box-shadow(~'inset 0 1px 0 rgba(255,255,255,0.2), inset 0 -1px 0 rgba(0,0,0,0.2), 0px 1px 2px rgba(0,0,0,0.25)');
 
-            &.error { background: @red; }
-            &.alert { background: @yellow; }
-            &.success { background: @green; }
+            &.error { background: @notification-error; }
+            &.alert { background: @notification-alert; }
+            &.success { background: @notification-success; }
         }
 
         &.url {
