--- a/src/stylesheets/Lungo.theme.default.less
+++ b/src/stylesheets/Lungo.theme.default.less
@@ -71,7 +71,7 @@ section > footer {
 
 }
 
-section > article { background: #f4f5f5; }
+section > article, section > [data-control="pull"] { background: #f4f5f5; }
 
 aside {
     color: #fff;
