--- a/src/stylesheets/Lungo.theme.default.less
+++ b/src/stylesheets/Lungo.theme.default.less
@@ -73,6 +73,11 @@ section > footer {
 
 section > article, section > [data-control="pull"] { background: #f4f5f5; }
 
+[data-control="pull"] {
+    color: #666;
+    text-shadow: 0 1px 0 white;
+}
+
 aside {
     color: #fff;
     background: @aside;
