--- a/src/stylesheets/css/Lungo.theme.default.css
+++ b/src/stylesheets/css/Lungo.theme.default.css
@@ -57,6 +57,10 @@ section > article,
 section > [data-control="pull"] {
   background: #f4f5f5;
 }
+[data-control="pull"] {
+  color: #666;
+  text-shadow: 0 1px 0 white;
+}
 aside {
   color: #fff;
   background: #191919;
