New event for pull element

--- a/src/stylesheets/Lungo.widgets.pull.less
+++ b/src/stylesheets/Lungo.widgets.pull.less
@@ -27,8 +27,7 @@ section > [data-control="pull"] {
         position: relative;
         top: -16px;
         margin-left: 4px;
-        font-size: 1.1em;
-        text-transform: lowercase; }
+        font-size: 1.1em;}
 
     &.rotate {
         & > .icon {
