--- a/src/stylesheets/Lungo.widgets.button.less
+++ b/src/stylesheets/Lungo.widgets.button.less
@@ -53,4 +53,10 @@ a.button {
             margin: 8px -18px 0 12px;
             float: left; }
     }
+
+    &.small {
+        height: 20px;
+        padding: 0 6px;
+        font-size: 12px;
+        line-height: 20px; }
 }
