--- a/src/stylesheets/mixins.less
+++ b/src/stylesheets/mixins.less
@@ -623,6 +623,22 @@
 //
 //============================================================
 
+.transition-duration(...) {
+    -webkit-transition-duration: @arguments;
+       -moz-transition-duration: @arguments;
+        -ms-transition-duration: @arguments;
+         -o-transition-duration: @arguments;
+            transition-duration: @arguments;
+}
+
+.transition-timing-function(...) {
+    -webkit-transition-timing-function: @arguments;
+       -moz-transition-timing-function: @arguments;
+        -ms-transition-timing-function: @arguments;
+         -o-transition-timing-function: @arguments;
+            transition-timing-function: @arguments;
+}
+
 .transition(...) {
     -webkit-transition: @arguments;
        -moz-transition: @arguments;
