--- a/src/stylesheets/Lungo.layout.aside.less
+++ b/src/stylesheets/Lungo.layout.aside.less
@@ -11,12 +11,12 @@
 
 
 section.aside {
-    &:not(.small) { .transform(translate(@aside-width, 0)); }
-    &.small { .transform(translate(@aside-width-small, 0)); }
+    &:not(.small) { .transform(translateX(@aside-width)); }
+    &.small { .transform(translateX(@aside-width-small)); }
 
     &.right {
-        .transform(translate(-@aside-width, 0));
-        &.small { .transform(translate(-@aside-width-small, 0)); }
+        .transform(translateX(-@aside-width));
+        &.small { .transform(translateX(-@aside-width-small)); }
     }
 }
 
