Form default margin: 0

--- a/src/stylesheets/Lungo.widgets.less
+++ b/src/stylesheets/Lungo.widgets.less
@@ -36,9 +36,10 @@
     &.right { float: right;}
 }
 
-
 .hidden { display: none; }
 .indented > * { margin: 10px; }
+.margined { margin: 3%; }
+
 .wrapper { padding: 8px 8px; }
 
 .icon.small { font-size: 1.3em; }
