apply the same rules for a.button and button

--- a/src/stylesheets/Lungo.widgets.button.less
+++ b/src/stylesheets/Lungo.widgets.button.less
@@ -9,11 +9,12 @@
 
 @import "constants.less";
 
-a.button {
+a.button, button {
     display: inline-block;
     height: 40px;
     padding: 0 8px;
     color: #fff !important;
+    border:none;
 
     background: #5a5a5a;
 
