Testing new fonts for Lungo 2.1

--- a/src/stylesheets/Lungo.theme.default.less
+++ b/src/stylesheets/Lungo.theme.default.less
@@ -8,6 +8,10 @@
  */
 
 @import "mixins.less";
+@import url("http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700");
+@import url("http://fonts.googleapis.com/css?family=Exo:200,400,700");
+@import url("http://fonts.googleapis.com/css?family=Titillium+Web:200,400,700");
+
 
 @theme: #0093D5;
     @theme-light:  #39ABE1;
@@ -33,7 +37,7 @@
 
 .app {
     background: #000;
-    font-family: Helvetica, Arial, sans-serif;
+    font-family: "Titillium Web", "Exo","Open Sans Condensed", Helvetica, Arial, sans-serif;
 }
 
 .theme, li.theme, a.theme {
