--- a/src/stylesheets/Lungo.widgets.less
+++ b/src/stylesheets/Lungo.widgets.less
@@ -8,6 +8,14 @@
  */
 
 @import "constants.less";
+// .overthrow {
+//     overflow: hidden; /* clearfix */
+// }
+
+.overthrow-enabled .overthrow {
+    overflow: auto;
+    -webkit-overflow-scrolling: touch;
+}
 
 .scroll {
     overflow-x: hidden;
